addon_config/source-ip-test/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echoserver
  annotations:
spec:
  rules:
  - host: echoserver.test.com
    http:
      paths:
      - backend:
          serviceName: echoserver 
          servicePort: 80
